<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>benchmark-languages</groupId>
	<artifactId>benchmark-groovy-with-java-syntax</artifactId>
	<packaging>jar</packaging>
	<version>1.0-SNAPSHOT</version>
	<name>benchmark-groovy-with-java-syntax</name>
	<profiles>
		<!-- release for java -->
		<profile>
			<id>release</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<properties>
				<java.optimize>true</java.optimize>
				<java.debug>false</java.debug>
			</properties>
		</profile>
		<!-- debug for java -->
		<profile>
			<id>debug</id>
			<activation>
				<property>
					<name>debug</name>
				</property>
			</activation>
			<properties>
				<java.optimize>false</java.optimize>
				<java.debug>true</java.debug>
			</properties>
		</profile>
	</profiles>
	<dependencies>
		<dependency>
			<groupId>org.codehaus.groovy.maven.runtime</groupId>
			<artifactId>gmaven-runtime-1.6</artifactId>
			<version>1.0</version>
			<scope>runtime</scope>
		</dependency>
	</dependencies>
	<build>
		<sourceDirectory>${basedir}/../src/main/java</sourceDirectory>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
					<optimize>${java.optimize}</optimize>
					<debug>${java.debug}</debug>
					<excludes>
						<exclude>**/*.java</exclude>
					</excludes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.groovy.maven</groupId>
				<artifactId>gmaven-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>generateStubs</goal>
							<goal>compile</goal>
						</goals>
						<configuration>
							<sources>
								<fileset>
									<directory>${basedir}/../src/main/java</directory>
									<includes>
										<include>**/*.java</include>
									</includes>
								</fileset>
							</sources>
							<optimize>${java.optimize}</optimize>
							<debug>${java.debug}</debug>
							<targetBytecode>1.6</targetBytecode>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>appassembler-maven-plugin</artifactId>
				<executions>
					<execution>
						<phase>package</phase>
						<configuration>
							<extraJvmArguments>-server -Xms1024m -Xmx1024m
								-XX:+AggressiveOpts</extraJvmArguments>
							<programs>
								<program>
									<mainClass>App</mainClass>
									<name>benchmark-groovy-with-java-syntax</name>
								</program>
							</programs>
						</configuration>
						<goals>
							<goal>assemble</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
